@@ -6,6 +6,8 @@
  - (bal) [configure.ac]  Missing ;; from cray patch.
  - (bal) [monitor_mm.c openbsd-compat/xmmap.h] Move xmmap() defines
    into it's own header.
+ - (stevesk) [auth-pam.[ch] session.c] pam_getenvlist() must be
+   freed by the caller; add free_pam_environment() and use it.
 
 20020721
  - (stevesk) [auth-pam.c] merge cosmetic changes from solar's
@@ -1417,4 +1419,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2391 2002/07/23 00:03:33 mouring Exp $
+$Id: ChangeLog,v 1.2392 2002/07/23 00:44:07 stevesk Exp $
